Fix details spacing, set same as paragraphs

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -169,6 +169,7 @@
 
   details {
     padding: $padding-16;
+    margin: $padding-16 0;
     border: $padding-1 solid var(--gray-200);
     border-radius: $border-radius;
 
